Fixing alignment

--- a/public/css/sudoku_solver.css
+++ b/public/css/sudoku_solver.css
@@ -46,3 +46,12 @@ input.entry {
 .hidden {
     display: none;
 }
+
+.container {
+    padding: 40px 15px;
+    text-align: center;
+}
+
+#sudoku {
+    margin-bottom: 20px;
+}
